--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/anuBDQy.png" />
     <script src="https://kit.fontawesome.com/8ed2f61178.js" crossorigin="anonymous"></script>
     <style>@import url('https://fonts.googleapis.com/css2?family=Questrial&family=Roboto:wght@100;300;400;500;700&family=Rubik:wght@400;500;600;700;800&display=swap');</style>
     <title>Slashfeed</title>
