--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -7,7 +7,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Anton&family=Fjalla+One&family=Oswald:wght@200;300;400;500;600;700&family=Questrial&family=Roboto:wght@100;300;400;500;700&family=Rubik:wght@400;500;600;700;800&display=swap');
     </style>
-    <title>Slashfeed</title>
+    <title>Slash/Feed</title>
   </head>
   <body>
     <div id="root"></div>
